[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30.1", features = ["signal", "process"] }
